--- a/IrmaQuicDashboard/IrmaQuicDashboard.csproj
+++ b/IrmaQuicDashboard/IrmaQuicDashboard.csproj
@@ -19,5 +19,6 @@
   <ItemGroup>
     <Folder Include="Models\Entities\" />
     <Folder Include="Models\Enums\" />
+    <Folder Include="Views\IrmaLogSession\" />
   </ItemGroup>
 </Project>
