--- a/IrmaQuicDashboard/IrmaQuicDashboard.csproj
+++ b/IrmaQuicDashboard/IrmaQuicDashboard.csproj
@@ -20,5 +20,6 @@
     <Folder Include="Models\Entities\" />
     <Folder Include="Models\Enums\" />
     <Folder Include="Views\IrmaLogSession\" />
+    <Folder Include="Views\IrmaLogSessionUpload\" />
   </ItemGroup>
 </Project>
