Finish up basic dashboard for analyzing app logs
new InitialCreate

--- a/IrmaQuicDashboard/IrmaQuicDashboard.csproj
+++ b/IrmaQuicDashboard/IrmaQuicDashboard.csproj
@@ -24,5 +24,6 @@
     <Folder Include="Repository\" />
     <Folder Include="Extensions\" />
     <Folder Include="Views\Dashboard\" />
+    <Folder Include="Logic\" />
   </ItemGroup>
 </Project>
