add irmajs for demo purposes

--- a/IrmaQuicDashboard/IrmaQuicDashboard.csproj
+++ b/IrmaQuicDashboard/IrmaQuicDashboard.csproj
@@ -25,5 +25,6 @@
     <Folder Include="Extensions\" />
     <Folder Include="Views\Dashboard\" />
     <Folder Include="Logic\" />
+    <Folder Include="Views\IrmaSession\" />
   </ItemGroup>
 </Project>
