handle failed processing, show more averages, new server log format processing

--- a/IrmaQuicDashboard/IrmaQuicDashboard.csproj
+++ b/IrmaQuicDashboard/IrmaQuicDashboard.csproj
@@ -26,5 +26,6 @@
     <Folder Include="Views\Dashboard\" />
     <Folder Include="Logic\" />
     <Folder Include="Views\IrmaSession\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 </Project>
